--- a/static/css/pages/_accounts.scss
+++ b/static/css/pages/_accounts.scss
@@ -273,7 +273,7 @@ span.account-reconcile-transaction-include {
 	min-width: 15em;
   }
 
-  span.account-reconcile-transaction-transfer {
+  span.account-reconcile-transaction-split {
 	min-width: 2.5em;
 	width: 2.5em;
   }
